; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_socket.c_socket_next.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/net/extr_net_socket.c_socket_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.addrinfo = type { i32, i32, i32, %struct.addrinfo* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @socket_next(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca %struct.addrinfo*, align 8
  store i8** %0, i8*** %3, align 8
  %5 = load i8**, i8*** %3, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = bitcast i8* %6 to %struct.addrinfo*
  store %struct.addrinfo* %7, %struct.addrinfo** %4, align 8
  %8 = load %struct.addrinfo*, %struct.addrinfo** %4, align 8
  %9 = getelementptr inbounds %struct.addrinfo, %struct.addrinfo* %8, i32 0, i32 3
  %10 = load %struct.addrinfo*, %struct.addrinfo** %9, align 8
  store %struct.addrinfo* %10, %struct.addrinfo** %4, align 8
  %11 = bitcast %struct.addrinfo* %10 to i8*
  %12 = load i8**, i8*** %3, align 8
  store i8* %11, i8** %12, align 8
  %13 = icmp ne i8* %11, null
  br i1 %13, label %14, label %25

14:                                               ; preds = %1
  %15 = load %struct.addrinfo*, %struct.addrinfo** %4, align 8
  %16 = getelementptr inbounds %struct.addrinfo, %struct.addrinfo* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.addrinfo*, %struct.addrinfo** %4, align 8
  %19 = getelementptr inbounds %struct.addrinfo, %struct.addrinfo* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.addrinfo*, %struct.addrinfo** %4, align 8
  %22 = getelementptr inbounds %struct.addrinfo, %struct.addrinfo* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = call i32 @socket(i32 %17, i32 %20, i32 %23)
  store i32 %24, i32* %2, align 4
  br label %26

25:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %26

26:                                               ; preds = %25, %14
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @socket(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
